--- a/package.json
+++ b/package.json
@@ -8,19 +8,21 @@
   "dependencies": {
     "axios": "^0.18.0",
     "history": "^4.6.3",
+    "jquery": "^1.11.1",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
+    "react-animated-slider": "^1.1.4",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.1.2",
+    "react-slick": "^0.23.2",
     "redux": "^3.7.2",
     "redux-form": "^8.1.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "rxjs": "^6.3.3",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1"
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -28,9 +30,11 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.24.1",
+    "create-react-class": "^15.6.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
+    "style-loader": "^0.23.1",
     "webpack": "^4.15.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.3"
