--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "2.1.5",
     "react-select": "^2.4.2",
     "react-slick": "^0.23.2",
+    "react-telephone-input": "^4.73.4",
     "react-transition-group": "^1.2.1",
     "redux": "^3.7.2",
     "redux-form": "^8.1.0",
