--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom-factories": "^1.0.2",
     "react-inputs-validation": "^2.1.9",
     "react-redux": "^5.0.5",
+    "react-responsive-modal": "^3.6.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
