--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-shallow-compare": "^15.6.2",
     "react-animated-slider": "^1.1.4",
+    "react-bootstrap": "^0.31.0",
+    "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^16.8.3",
     "react-dom-factories": "^1.0.2",
     "react-inputs-validation": "^2.1.9",
