--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.8.3",
     "react-dom-factories": "^1.0.2",
     "react-inputs-validation": "^2.1.9",
+    "react-private-route": "^1.1.2",
     "react-redux": "^5.0.5",
     "react-responsive-modal": "^3.6.0",
     "react-router": "^4.3.1",
