--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-datepicker": "^2.4.0",
     "react-dom": "^16.8.3",
     "react-dom-factories": "^1.0.2",
+    "react-images-upload": "^1.2.6",
     "react-inputs-validation": "^2.1.9",
     "react-private-route": "^1.1.2",
     "react-redux": "^5.0.5",
