--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-addons-shallow-compare": "^15.6.2",
     "react-animated-slider": "^1.1.4",
     "react-bootstrap": "^0.31.0",
+    "react-compound-slider": "^2.2.0",
     "react-datepicker": "^2.4.0",
     "react-dom": "^16.8.3",
     "react-dom-factories": "^1.0.2",
