--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "history": "^4.6.3",
     "jquery": "^1.11.1",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.3",
     "react-addons-css-transition-group": "^15.6.2",
