--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "history": "^4.6.3",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.3",
     "react-addons-css-transition-group": "^15.6.2",
@@ -36,6 +37,7 @@
     "react-slick": "^0.23.2",
     "react-telephone-input": "^4.73.4",
     "react-transition-group": "^1.2.1",
+    "reactstrap": "^8.0.1",
     "redux": "^3.7.2",
     "redux-form": "^8.1.0",
     "redux-logger": "^3.0.6",
