--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "start": "webpack-dev-server --open",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "rimraf build/**/*.map"
   },
+
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "babel-loader": "^7.1.5",
