--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "redux-thunk": "^2.2.0",
     "rxjs": "^6.3.3",
     "sass-loader": "^7.1.0",
+    "surge": "^0.21.3",
     "webpack-merge": "^4.2.1"
   },
   "scripts": {
